Fix toolbar scrolling up out of view on mobile

--- a/title.css
+++ b/title.css
@@ -15,6 +15,7 @@ body {
     font-family: 'Inter', sans-serif !important;
     background-color: var(--bgcolor) !important;
     transition: background-color 2s cubic-bezier(0.1, 0.9, 0.2, 1);
+    overflow-y: hidden;
 }
 
 [contenteditable="true"]:empty:not(:focus):before {
